# ChangeLog for dev-util/kdesvn
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/kdesvn/Attic/ChangeLog,v 1.67 2009/08/12 16:45:46 wired Exp $

  12 Aug 2009; Alex Alexander <wired@gentoo.org> kdesvn-1.0.5.ebuild:
  fixed build fail with kde 4 installed

*kdesvn-1.3.2 (24 Jul 2009)

  24 Jul 2009; Theo Chatzimichos <tampakrap@gentoo.org>
  +kdesvn-1.3.2.ebuild:
  Version bump, fixes bug 277664

*kdesvn-1.3.1 (30 Jun 2009)
*kdesvn-1.3.0-r1 (30 Jun 2009)

  30 Jun 2009; Theo Chatzimichos <tampakrap@gentoo.org>
  -kdesvn-1.2.4.ebuild, -kdesvn-1.3.0.ebuild, +kdesvn-1.3.0-r1.ebuild,
  +kdesvn-1.3.1.ebuild:
  Version bump, remove old, also change KDEDIR with PREFIX (bug 275173),
  thus revision bump for 1.3.0

  31 May 2009; Markus Meier <maekke@gentoo.org> kdesvn-1.0.5.ebuild:
  amd64 stable, bug #270688

  26 May 2009; Christian Faulhammer <fauli@gentoo.org> kdesvn-1.0.5.ebuild:
  stable x86, bug 270688

*kdesvn-1.0.5 (21 May 2009)

  21 May 2009; Theo Chatzimichos <tampakrap@gentoo.org>
  -kdesvn-1.0.1.ebuild, -kdesvn-1.0.4.ebuild, +kdesvn-1.0.5.ebuild:
  Version bump for the kde3 version, remove some old kde3 versions (bug
  269813) 
  1.0.5 solves compilation and linking bugs: bug 243222, bug 244714, bug
  248875 and as-needed bug 250085
  Also, rewritten in EAPI-2 and slotted in :3.5

*kdesvn-1.3.0 (20 Apr 2009)

  20 Apr 2009; Theo Chatzimichos <tampakrap@gentoo.org>
  +kdesvn-1.3.0.ebuild:
  Version Bump

  13 Apr 2009; Theo Chatzimichos <tampakrap@gentoo.org>
  -kdesvn-0.13.0.ebuild, -kdesvn-0.14.2.ebuild:
  remove old versions

  06 Apr 2009; Tomas Chvatal <scarabeus@gentoo.org> kdesvn-1.2.4.ebuild:
  Remove unneded depend.

*kdesvn-1.2.4 (01 Mar 2009)

  01 Mar 2009; Theo Chatzimichos <tampakrap@gentoo.org>
  -kdesvn-1.2.3.ebuild, +kdesvn-1.2.4.ebuild:
  Version bump, change slot to :2

*kdesvn-1.2.3 (05 Feb 2009)

  05 Feb 2009; Theo Chatzimichos <tampakrap@gentoo.org>
  +kdesvn-1.2.3.ebuild: